# pi-as-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: refresh-daemon.sh  screenshot_tui.py
src/pi_as_mcp/: __init__.py  cli.py  config.py  config_tui.py  daemon.py  daemon_client.py  paths.py  pi_rpc.py  server.py  sessions.py  skill.py  smoke.py  stats.py  tui.py
src/pi_as_mcp/assets/: disable_fetch_timeouts.mjs
tests/: conftest.py  test_bugfixes.py  test_cli.py  test_config.py  test_config_tui.py  test_daemon.py  test_paths.py  test_pi_rpc.py  test_server.py  test_sessions.py  test_skill.py  test_stats.py  test_tui.py
