[project]
name = "pi-as-mcp"
version = "0.1.0"
description = "MCP bridge that delegates small tasks to Pi RPC mode"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "pi-as-mcp contributors" },
]
keywords = ["mcp", "pi", "coding-agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "mcp>=1.13.0",
    "textual>=8.2.7",
]

[project.scripts]
pi-as-mcp = "pi_as_mcp.server:main"
pi-agent = "pi_as_mcp.cli:main"
pi-agent-daemon = "pi_as_mcp.daemon:main"
pi-agent-tui = "pi_as_mcp.tui:main"
pi-agent-config = "pi_as_mcp.config_tui:main"
piw = "pi_as_mcp.cli:wait_main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
